papi, bstats, fix million bugs and added many features...

--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -1,9 +1,16 @@
 messages:
   unknown_subcommand: "Unknown subcommand."
+  no_permission: "You do not have permission."
   only_players_can_use: "Only players can use this command."
-  usage_faction_create: "Usage: /faction create <name>"
+  usage_faction_create: "Usage: /faction create <name> <#hex>"
+  usage_faction_delete: "Usage: /faction delete <name>"
+  only_leader_can_dissolve: "Only the leader can dissolve his faction."
+  faction_dissolved: "Faction %factionName% has been dissolved."
+  faction_deleted_by_admin: "Faction %factionName% has been deleted by admin."
+  faction_not_found: "Faction not found."
+  invalid_color_format: "§cInvalid color format, use #RRGGBB"
   faction_already_exists: "A faction with this name already exists."
-  faction_created_successfully: "Faction %factionName% has been created successfully!"
+  faction_created_successfully: "Faction %factionName% has been created successfully! Color: %color%"
   error_creating_faction: "An error occurred while creating the faction."
   no_pending_invites: "You don't have any pending invites or the invite has expired."
   faction_joined_successfully: "You have successfully joined the faction %factionName%!"
@@ -26,3 +33,4 @@ messages:
   confirm_transfer_leadership: "Are you sure you want to transfer leadership to %newLeaderName%?"
   type_command_again_to_confirm: "Type /faction transfer %newLeaderName% again to confirm."
   error_transferring_leadership: "An error occurred while transferring leadership."
+  invite_cooldown: "Please wait another %time% seconds before inviting again."
