--- a/src/main/resources/lang/ru.yml
+++ b/src/main/resources/lang/ru.yml
@@ -1,9 +1,16 @@
 messages:
   unknown_subcommand: "Неизвестная подкоманда."
+  no_permission: "У вас нет прав для использование команды"
   only_players_can_use: "Только игроки могут использовать эту команду."
-  usage_faction_create: "Использование: /faction create <название>"
+  usage_faction_create: "Использование: /faction create <название> <#hex>"
+  usage_faction_delete: "Использование: /faction delete <name>"
+  only_leader_can_dissolve: "Только лидер может распустить свою фракцию"
+  faction_dissolved: "Фракция %factionName% распущена."
+  faction_deleted_by_admin: "Фракция %factionName% удалена админом."
+  faction_not_found: "Фракция не найдена."
+  invalid_color_format: "Неверный формат цвета, используйте #RRGGBB"
   faction_already_exists: "Фракция с таким названием уже существует."
-  faction_created_successfully: "Фракция %factionName% успешно создана!"
+  faction_created_successfully: "Фракция %factionName% успешно создана! Цвет: %color%"
   error_creating_faction: "Произошла ошибка при создании фракции."
   no_pending_invites: "У вас нет приглашений или приглашение истекло."
   faction_joined_successfully: "Вы успешно присоединились к фракции %factionName%!"
@@ -26,3 +33,4 @@ messages:
   confirm_transfer_leadership: "Вы уверены, что хотите передать лидерство игроку %newLeaderName%?"
   type_command_again_to_confirm: "Введите /faction transfer %newLeaderName% ещё раз для подтверждения."
   error_transferring_leadership: "Произошла ошибка при передаче лидерства."
+  invite_cooldown: "§cПодождите ещё %time% сек, прежде чем снова приглашать."
